# patternfly-dioxus

./: .gitignore  Cargo.toml  README.md  index.html  lib.rs
src/: accordion.rs  alert.rs  badge.rs  card.rs  chip.rs  datepicker.rs  dropdown.rs  label.rs  lib.rs  main.rs  modal.rs  spiner.rs  tabs.rs  toast.rs  tooltip.rs
