[package]
name = "patternfly-dioxus"
version = "0.1.1"
edition = "2021"
categories = ["wasm", "web-programming", "gui"]
keywords = ["dioxus", "patternfly", "web", "html"]
license = "MIT"
readme = "README.md"
description = "Patternfly v4 Component for Dioxus"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.2.4", features = ["web","fermi","ssr"] }
serde = "1"
gloo = "0.8"
serde_json = "1"

